fix: vertical alignment

--- a/src/styles.css
+++ b/src/styles.css
@@ -41,7 +41,9 @@ body {
     align-items: center;
     justify-content: center;
     user-select: none;
-    height: 100vh;
+    position: fixed;
+    width: 100%;
+    height: 100%;
 }
 
 [id='toggle-heart'] {
